<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.order.ConfirmActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:id="@+id/layout_cart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right">

                <ImageButton
                    android:id="@+id/btn_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cart"
                    android:layout_gravity="right|center_vertical"
                    android:layout_margin="16dp"
                    android:background="@null"/>
                <TextView
                    android:id="@+id/tv_cart_quantity"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_toRightOf="@+id/btn_cart"
                    android:background="@drawable/background_cart_quantity"
                    android:gravity="center"
                    android:text="0"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginTop="5dp"
                    android:textSize="11sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_order_confirmation"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_layout"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_order"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview1"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="@color/yellow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="150dp">

            <TextView
                android:id="@+id/textview2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/string_your_order_has_been_processed"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/tv_order_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Your order ID is #101010"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:layout_margin="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/string_return_to_products"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_order" />

</androidx.constraintlayout.widget.ConstraintLayout>